item, user added

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -2,7 +2,9 @@
   "navbar": {
     "login": "Login",
     "signup": "Sign Up",
-    "search": "Search"
+    "search": "Search",
+    "dashboard": "Dashboard",
+    "logout": "Log out"
   },
   "hero": {
     "title1": "Welcome to",
