--- a/src/assets/locales/uz/translation.json
+++ b/src/assets/locales/uz/translation.json
@@ -36,5 +36,98 @@
     "password": "Parol",
     "password2": "Parolni qayta kiriting",
     "haveAccount": "Hisobingiz bormi? tizimga kirish"
-  }
+  },
+  "dashboard": {
+    "users": "Foydalanuvchilar Paneli",
+    "categories": "Kategoriyalar Paneli",
+    "collections": "Kolleksiyalar Paneli",
+    "items": "Narsalar Paneli"
+  },
+  "usersDashboard": {
+    "block": "Bloklash",
+    "unBlock": "Blokdan chiqarish",
+    "delete": "O'chirish",
+    "makeAnAdmin": "Admin qilish",
+    "removeAdmin": "Adminlikni o'chirish",
+    "name": "Ism",
+    "role": "Rol",
+    "registeredTime": "Ro'yxatdan o'tgan vaqt",
+    "lastlLoginTime": "Oxirgi faollik",
+    "status": "Holat",
+    "deletedMessage": "Tanlangan foydalanuvchilar oʻchirildi",
+    "blockedMessage": "Tanlangan foydalanuvchilar bloklandi",
+    "unBlockedMessage": "Tanlangan foydalanuvchilar blokdan chiqarildi",
+    "makeAdminMessage": "Tanlangan foydalanuvchilar admin bo'ldi",
+    "removeAdminMessage": "Tanlangan foydalanuvchilar admindan chiqarildi"
+  },
+  "categoriesDashboard": {
+    "categoryName": "Kategoriya nomi",
+    "name": "Nomi",
+    "en": "Inglizcha",
+    "uz": "O'zbekcha",
+    "newCategory": "Kategoriya yaratish",
+    "editCategory": "Kategoriyani o'zgartirish",
+    "deletedMessage": "Tanlangan katagoriyalar o'chirildi",
+    "createdMessage": "Tanlangan katagoriyalar qo'shildi",
+    "editedMessage": "Tanlangan katagoriyalar tahrirlandi",
+    "fieldsTwoCharacter": "Maydonlar kamida 2 ta belgidan iborat bo'lishi kerak"
+  },
+  "collectionsDashboard": {
+    "volume": "Hajmi",
+    "name": "Nomi",
+    "collection":"Kolleksiya",
+    "desc": "Tavsif",
+    "owner": "Egasi",
+    "category": "Kategoriya",
+    "selectCategory": "Kategoriyani tanlash",
+    "description": "Tavsif",
+    "publishedAt": "Yaratildi",
+    "newCollection": "Kolleksiya yaratish",
+    "editCollection": "Kolleksiya tahrirash",
+    "imageInfo": "Rasm yuklash ixtiyoriy. Fayl rasm va 5 MB dan kam bo'lishi kerak",
+    "deletedMessage": "Tanlangan kolleksiyalar o'chirildi",
+    "createdMessage": "Tanlangan kolleksiyalar qo'shildi",
+    "editedMessage": "Tanlangan kolleksiyalar tahrirlandi",
+    "fieldsTwoCharacter": "Maydonlar kamida 2 ta belgidan iborat bo'lishi kerak"
+  },
+  "itemsDashboard": {
+    "item": "Mahsulot",
+    "newItem": "Yangi yaratish",
+    "editItem": "Tahrirlash",
+    "collection": "Kolleksiya",
+    "tags": "Teglar",
+    "name": "Nomi",
+    "category": "Kategoriya",
+    "selectCategory": "Katagoriyani tanlang",
+    "selectCollection": "Kollecsiyani tanlang",
+    "description": "Tavsif",
+    "deletedMessage": "Tanlangan narsalar o'chirildi",
+    "createdMessage": "Mahsulot yaratildi",
+    "editedMessage": "Tanlangan narsa tahrirlandi"
+  },
+  "itemId": {
+    "added": "Sanada",
+    "by": "qo'shdi",
+    "comment": "Izoh yozing"
+  },
+  "collectionId": {
+    "name": "Nomi",
+    "tags": "Teglar",
+    "createdOn": "Yaratilgan sanasi"
+  },
+  "create": "Yaratish",
+  "update": "Yangilash",
+  "delete":"O'chirish",
+  "cancel":"Bekor qilish",
+  "admin": "Admin",
+  "notAdmin": "Admin emas",
+  "active": "Faol",
+  "blocked": "Bloklangan",
+  "results": "Natijalar",
+  "replies": "Izohlar",
+  "collectionItems": "Kolleksiya buyumlari",
+  "somethingWentWrong": "Nimadur xato ketdi!",
+  "author": "Egasi",
+  "createdOn": "Sanasi",
+  "category": "Kategoriya"
 }
