Csv export added to user dashboard and items dashboard, all components ordered

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -118,6 +118,8 @@
     "createdOn": "Created on"
   },
   "exportToCsv": "Export to CSV",
+  "allCollections": "All Collections",
+  "allItems": "All Items",
   "create": "Create",
   "update": "Update",
   "delete": "Delete",
